--- a/github-app/package.json
+++ b/github-app/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "flexgrid.io": "^3.0.4",
+    "node-sass": "^7.0.3",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.6.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.55.0"
   }
 }
